Perkin-UAT/force-app/main/default/objects/SMAX_PS_ComplaintTask__c/SMAX_PS_ComplaintTask__c.object-meta.xml
<CustomObject>
    <description>Complaint Task</description>
    <label>Complaint Task</label>
    <nameField>
        <displayFormat>CTN-{0000000000}</displayFormat>
        <label>Complaint Task Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Complaint Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>