Perkin-UAT/force-app/main/default/objects/SMAX_PS_ComplaintTask__c/fields/SMAX_PS_Complaint__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Complaint__c</fullName>
    <description>Complaint Name</description>
    <inlineHelpText>Complaint Name</inlineHelpText>
    <label>Complaint</label>
    <referenceTo>SMAX_PS_Complaint__c</referenceTo>
    <relationshipLabel>Complaint Tasks</relationshipLabel>
    <relationshipName>Complaint_Tasks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>