Perkin-UAT/force-app/main/default/objects/SMAX_PS_ComplaintTask__c/fields/SMAX_PS_CompletedBy__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_CompletedBy__c</fullName>
    <description>Completed By Username</description>
    <inlineHelpText>Completed By Username</inlineHelpText>
    <label>Completed By Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>