Perkin-UAT/force-app/main/default/objects/SMAX_PS_ComplaintTask__c/fields/SMAX_PS_UserResponsible__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_UserResponsible__c</fullName>
    <description>User Responsible</description>
    <inlineHelpText>User Responsible</inlineHelpText>
    <label>User Responsible</label>
    <length>255</length>
    <type>Text</type>
</CustomField>